code25_all/swift/26255408.txt
import Foundation
let data = NSData(base64EncodedString: "key", options: kNilOptions)

init(bytes:length:)
Playground execution failed: <EXPR>:13:18: error: incorrect argument labels in call
(have 'base64EncodedString:options:', expected 'bytes:length:')
let data = NSData(base64EncodedString: "key", options: kNilOptions)
             ^~~~~~~~~~~~~~~~~~~~         ~~~~~~~
              bytes                       length

